--- a/component/forms/style.scss
+++ b/component/forms/style.scss
@@ -40,6 +40,8 @@
   .panel-body {
     padding: 10px 5px;
     padding-bottom: 0 !important;
+    max-height: 320px;
+    overflow-y: auto;
   }
 }
 
