--- a/component/forms/schema/plugins/table/table-properties.html
+++ b/component/forms/schema/plugins/table/table-properties.html
@@ -6,10 +6,11 @@
                 <div ng-include="'forms/schema/components/base-properties/label-properties.html'"></div>
                 <div class="row no-vertical-margin">
                     <div class="form-group margin-bottom"
-                         ng-class="{'has-error': sectionPropertiesForm.cssClass.$invalid}">
-                        <label for="cssClass" class="col-sm-4 control-label">Class Name:</label>
+                         ng-class="{'has-error': sectionPropertiesForm.{{field.name}}-cssClass.$invalid}">
+                        <label for="{{field.name}}-cssClass" class="col-sm-4 control-label">Class Name:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="cssClass" name="cssClass"
+                            <input type="text" class="form-control" id="{{field.name}}-cssClass"
+                                   name="{{field.name}}-cssClass"
                                    placeholder="Css Class..." ng-model="field.cssClass"
                                    ng-required="true">
                         </div>
@@ -17,10 +18,10 @@
                 </div>
                 <div class="row no-vertical-margin">
                     <div class="form-group margin-bottom"
-                         ng-class="{'has-error': sectionPropertiesForm.code.$invalid}">
-                        <label for="code" class="col-sm-4 control-label">Component code:</label>
+                         ng-class="{'has-error': sectionPropertiesForm.{{field.name}}-code.$invalid}">
+                        <label for="{{field.name}}-code" class="col-sm-4 control-label">Component code:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="code" name="code"
+                            <input type="text" class="form-control" id="{{field.name}}-code" name="{{field.name}}-code"
                                    placeholder="Code..." ng-model="field.code"
                                    ng-required="false">
                             <span class="help-block">Code is like a identification or type in this form.
