--- a/component/forms/schema/components/row/row-properties.html
+++ b/component/forms/schema/components/row/row-properties.html
@@ -4,26 +4,26 @@
             <div class="container padding-top">
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12">
-                        <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{field.name}}-rowName.$invalid}">
-                            <label for="{{field.name}}-rowName" class="col-sm-5 control-label">Name:</label>
+                        <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{row.name}}-rowName.$invalid}">
+                            <label for="{{row.name}}-rowName" class="col-sm-5 control-label">Name:</label>
                             <div class="col-sm-7">
-                                <input type="text" class="form-control" id="{{field.name}}-rowName" name="{{field.name}}-rowName"
+                                <input type="text" class="form-control" id="{{row.name}}-rowName" name="{{row.name}}-rowName"
                                        placeholder="Name..." ng-model="row.name"
                                        ng-required="true">
                             </div>
                         </div>
-                        <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{field.name}}-cssClass.$invalid}">
-                            <label for="{{field.name}}-cssClass" class="col-sm-5 control-label">Class Name:</label>
+                        <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{row.name}}-cssClass.$invalid}">
+                            <label for="{{row.name}}-cssClass" class="col-sm-5 control-label">Class Name:</label>
                             <div class="col-sm-7">
-                                <input type="text" class="form-control" id="{{field.name}}-cssClass" name="{{field.name}}-cssClass"
+                                <input type="text" class="form-control" id="{{row.name}}-cssClass" name="{{row.name}}-cssClass"
                                        placeholder="Css Class..." ng-model="row.cssClass"
                                        ng-required="true">
                             </div>
                         </div>
-                        <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{field.name}}-cols.$invalid}">
-                            <label for="{{field.name}}-cols" class="col-sm-5 control-label">Cols:</label>
+                        <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{row.name}}-cols.$invalid}">
+                            <label for="{{row.name}}-cols" class="col-sm-5 control-label">Cols:</label>
                             <div class="col-sm-7">
-                                <input type="number" class="form-control" id="{{field.name}}-cols" name="{{field.name}}-cols"
+                                <input type="number" class="form-control" id="{{row.name}}-cols" name="{{row.name}}-cols"
                                        placeholder="Cols..." ng-model="row.cols.length"
                                        ng-required="false" ng-disabled="true">
                             </div>
