--- a/component/forms/schema/components/multi-select/multi-select-options-properties.html
+++ b/component/forms/schema/components/multi-select/multi-select-options-properties.html
@@ -1,8 +1,8 @@
 <div class="row no-vertical-margin">
     <div class="form-group margin-bottom">
-        <label for="limitTo" class="col-sm-2 control-label">Limit to:</label>
+        <label for="{{field.name}}-limitTo" class="col-sm-2 control-label">Limit to:</label>
         <div class="col-sm-10">
-            <input type="number" class="form-control" id="limitTo" name="limitTo"
+            <input type="number" class="form-control" id="{{field.name}}-limitTo" name="{{field.name}}-limitTo"
                    placeholder="Limit list to..." ng-model="field.limitTo"
                    ng-required="false">
         </div>
