--- a/component/forms/schema/plugins/if-yes/if-yes-properties.html
+++ b/component/forms/schema/plugins/if-yes/if-yes-properties.html
@@ -6,10 +6,11 @@
                 <div ng-include="'forms/schema/components/base-properties/label-properties.html'"></div>
                 <div class="row no-vertical-margin">
                     <div class="form-group margin-bottom"
-                         ng-class="{'has-error': fieldPropertiesForm.toggleValue.$invalid}">
-                        <label for="toggleValue" class="col-sm-4 control-label">Toggle value:</label>
+                         ng-class="{'has-error': fieldPropertiesForm.{{field.name}}-toggleValue.$invalid}">
+                        <label for="{{field.name}}-toggleValue" class="col-sm-4 control-label">Toggle value:</label>
                         <div class="col-sm-8">
-                            <input type="checkbox" id="toggleValue" name="toggleValue" ng-model="field.value.toggle"
+                            <input type="checkbox" id="{{field.name}}-toggleValue" name="{{field.name}}-toggleValue"
+                                   ng-model="field.value.toggle"
                                    class="ng-pristine ng-valid">
                         </div>
                     </div>
@@ -17,10 +18,11 @@
                 <div ng-include="'forms/schema/components/toggle/ln-properties.html'"></div>
                 <div class="row no-vertical-margin">
                     <div class="form-group margin-bottom"
-                         ng-class="{'has-error': fieldPropertiesForm.textValue.$invalid}">
-                        <label for="textValue" class="col-sm-4 control-label">Text value:</label>
+                         ng-class="{'has-error': fieldPropertiesForm.{{field.name}}-textValue.$invalid}">
+                        <label for="{{field.name}}-textValue" class="col-sm-4 control-label">Text value:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="textValue" name="textValue"
+                            <input type="text" class="form-control" id="{{field.name}}-textValue"
+                                   name="{{field.name}}-textValue"
                                    placeholder="Text value..." ng-model="field.value.textarea" ng-required="false">
                         </div>
                     </div>
