--- a/component/forms/schema/components/row/row-properties.html
+++ b/component/forms/schema/components/row/row-properties.html
@@ -1,29 +1,35 @@
 <uib-tabset class="nav-tabs-custom">
     <uib-tab index="0" heading="Properties">
         <form name="sectionPropertiesForm" class="form-horizontal">
-            <div class="container padding-top">
+            <div class="padding-top">
                 <div class="row">
                     <div class="col-md-4 col-sm-4 col-xs-12">
-                        <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{row.name}}-rowName.$invalid}">
+                        <div class="form-group"
+                             ng-class="{'has-error': sectionPropertiesForm.{{row.name}}-rowName.$invalid}">
                             <label for="{{row.name}}-rowName" class="col-sm-5 control-label">Name:</label>
                             <div class="col-sm-7">
-                                <input type="text" class="form-control" id="{{row.name}}-rowName" name="{{row.name}}-rowName"
+                                <input type="text" class="form-control" id="{{row.name}}-rowName"
+                                       name="{{row.name}}-rowName"
                                        placeholder="Name..." ng-model="row.name"
                                        ng-required="true">
                             </div>
                         </div>
-                        <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{row.name}}-cssClass.$invalid}">
+                        <div class="form-group"
+                             ng-class="{'has-error': sectionPropertiesForm.{{row.name}}-cssClass.$invalid}">
                             <label for="{{row.name}}-cssClass" class="col-sm-5 control-label">Class Name:</label>
                             <div class="col-sm-7">
-                                <input type="text" class="form-control" id="{{row.name}}-cssClass" name="{{row.name}}-cssClass"
+                                <input type="text" class="form-control" id="{{row.name}}-cssClass"
+                                       name="{{row.name}}-cssClass"
                                        placeholder="Css Class..." ng-model="row.cssClass"
                                        ng-required="true">
                             </div>
                         </div>
-                        <div class="form-group" ng-class="{'has-error': sectionPropertiesForm.{{row.name}}-cols.$invalid}">
+                        <div class="form-group"
+                             ng-class="{'has-error': sectionPropertiesForm.{{row.name}}-cols.$invalid}">
                             <label for="{{row.name}}-cols" class="col-sm-5 control-label">Cols:</label>
                             <div class="col-sm-7">
-                                <input type="number" class="form-control" id="{{row.name}}-cols" name="{{row.name}}-cols"
+                                <input type="number" class="form-control" id="{{row.name}}-cols"
+                                       name="{{row.name}}-cols"
                                        placeholder="Cols..." ng-model="row.cols.length"
                                        ng-required="false" ng-disabled="true">
                             </div>
@@ -34,42 +40,44 @@
                     </div>
                     <div class="col-md-8 col-sm-8 col-xs-12">
                         <!--<h3>Columns configuration</h3>-->
-                        <table class="table table-condensed table-responsive table-striped">
-                            <thead>
-                            <tr>
-                                <th>Columns #</th>
-                                <th>CSS class</th>
-                                <th>Actions</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr ng-repeat="col in row.cols">
-                                <td>
-                                    {{$index + 1}}
-                                </td>
-                                <td>
-                                    <input type="text" name="cssClass" ng-model="col.cssClass"
-                                           class="form-control input-sm" required/>
-                                </td>
-                                <td>
-                                    <button type="button" class="btn btn-danger btn-sm" ng-click="removeColumn($index)"
-                                            ng-if="!row.isEditing">
-                                        <span class="glyphicon glyphicon-trash"></span>
-                                    </button>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                </td>
-                                <td>
-                                </td>
-                                <td>
-                                    <button type="button" class="btn btn-primary" ng-click="addColumn(row)">Add column
-                                    </button>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
+                        <div class="table-responsive">
+                            <table class="table table-condensed table-striped">
+                                <thead>
+                                <tr>
+                                    <th>Columns #</th>
+                                    <th>CSS class</th>
+                                    <th>Actions</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="col in row.cols">
+                                    <td>
+                                        {{$index + 1}}
+                                    </td>
+                                    <td>
+                                        <input type="text" name="cssClass" ng-model="col.cssClass"
+                                               class="form-control input-sm" required/>
+                                    </td>
+                                    <td>
+                                        <button type="button" class="btn btn-danger btn-sm"
+                                                ng-click="removeColumn($index)"
+                                                ng-if="!row.isEditing">
+                                            <span class="glyphicon glyphicon-trash"></span>
+                                        </button>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td>
+                                        <button type="button" class="btn btn-primary" ng-click="addColumn(row)">Add
+                                            column
+                                        </button>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
